manifests/juice-shop-microgateway-config/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: juice-shop
  namespace: juice-shop
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: airlock-gateway
  to:
  - group: ""
    kind: Service
