manifests/juice-shop-microgateway-config/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: juice-shop-gateway
  namespace: juice-shop
spec:
  gatewayClassName: airlock-microgateway
  listeners:
    - name: http
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
