manifests/juice-shop-microgateway-config/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: juice-shop
  namespace: airlock-gateway
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-juice-shop
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: juice-shop
      namespace: juice-shop
      port: 3000
